QA_Ipreo/src/objects/Pipeline_History__c.object
<CustomObject>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACpV__c</fullName>
        <label>ACpV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Month__c</fullName>
        <formula>Month( DATEVALUE(Close_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Annual_Transaction_Fees__c</fullName>
        <label>Est. Annual Transaction Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_ACV__c</fullName>
        <label>Local ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_ACpV__c</fullName>
        <label>Local ACpV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_TCV__c</fullName>
        <label>Local TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_TCpV__c</fullName>
        <label>Local TCpV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_New_Business__c</fullName>
        <label>Net New Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <displayFormat>OPP-HIS-{000000000}</displayFormat>
        <label>Opportunity Count</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Currency__c</fullName>
        <label>Opportunity Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pass_Through__c</fullName>
        <label>Pass Through</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_ACV__c</fullName>
        <label>Prior Year ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_ACpV__c</fullName>
        <label>Prior Year ACpV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Pass_Through__c</fullName>
        <label>Prior Year Pass Through</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <label>Product Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Est_Annual_Transaction_Fees__c</fullName>
        <label>Product Est. Annual Transaction Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Expense_Cap__c</fullName>
        <label>Product Expense Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_NNB__c</fullName>
        <label>Product NNB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Pass_Through__c</fullName>
        <label>Product Pass Through</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Prior_Year_Pass_Through__c</fullName>
        <label>Product Prior Year Pass Through</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Region__c</fullName>
        <label>Product Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Revenue_Type__c</fullName>
        <label>Product Revenue Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Transaction_Type__c</fullName>
        <label>Product Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Upfront_Expense_Fee__c</fullName>
        <label>Product Upfront Expense Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Vertical__c</fullName>
        <label>Product Vertical</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Execution_Time__c</fullName>
        <label>Report Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revenue_Increase__c</fullName>
        <label>Revenue Increase (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCpV__c</fullName>
        <label>TCpV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Pipeline History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Name__c</columns>
        <columns>ACpV__c</columns>
        <columns>Local_TCpV__c</columns>
        <columns>Product_Status__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Bundle__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Vertical__c</field>
            <operation>equals</operation>
            <value>GMG</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pipeline History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>